--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef's Table</title>
     <!-- link google fonts here -->
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+
     <!-- link all the css here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" id="main-nav">
+    <nav class="navbar navbar-default" id="main-nav">
         <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -40,6 +42,36 @@
     </nav><!-- /.navbar -->
 
     <!-- body site code here -->
+    <section class="home-section text-white">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-sm-12">
+            <h1>There is room for you at our table</h1>
+            <a href="#" class="btn btn-primary">make a reservation</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-sm-12">
+            <h2>Make a reservation</h2>
+            <form action="">
+              First name:<br>
+              <input type="text"><br>
+              Last name:<br>
+              <input type="text"><br>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+            <p>
+                     <i class="fab fa-facebook-square"></i> <i class="fab fa-twitter"></i> <i class="fab fa-instagram"></i>
+                   </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- link all the scripts here -->
     <script src="js/jquery-3.3.1.min.js" charset="utf-8"></script>
