--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Chef's Table</title>
     <!-- link google fonts here -->
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
 
     <!-- link all the css here -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -31,11 +33,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <!--
+
                     <li><a href="#home-section">Home</a></li>
                     <li><a href="#menu-section">Explore the Menu</a></li>
                     <li><a href="#reservation-section">Make a Reservation</a></li>
-                    -->
+                   
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
